--- a/multiverse/locale/it_IT/LC_MESSAGES/multiverse.po
+++ b/multiverse/locale/it_IT/LC_MESSAGES/multiverse.po
@@ -1,17 +1,17 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Multiverse 2.0\n"
+"Project-Id-Version: Multiverse 2.1.1\n"
 "POT-Creation-Date: 2021-02-12 18:38+0100\n"
-"PO-Revision-Date: 2021-02-12 18:38+0100\n"
+"PO-Revision-Date: 2022-03-08 16:09+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: it_IT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
-"X-Poedit-Basepath: ../../..\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.0.1\n"
+"X-Poedit-Basepath: ../../..\n"
 "X-Poedit-KeywordsList: ;gettext_th;ngettext_th:1,2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-SearchPath-0: .\n"
@@ -30,7 +30,7 @@ msgstr "Fotografo"
 
 #: footer.php:88
 msgid "Get in touch"
-msgstr "Contattami"
+msgstr "Mettiti in contatto"
 
 #: footer.php:99
 msgid "See more"
